# protparser

./: .gitignore  Dockerfile  LICENSE  README.md  inventory_guide.txt  pyproject.toml
protparser.egg-info/: PKG-INFO  SOURCES.txt
src/protparser/: __init__.py  alphafold.py  parallel_inventory.py  rcsb.py  utils.py
src/protparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/protparser/utils/: data_utils.py  pandas_utils.py
src/protparser/utils/mmcif/: atom_site.py  cif_columns.py  entity.py  modification_feature.py  seq_build.py  seq_cleaning.py
src/protparser/utils/parallel/: chunking.py
tests/: test_downloads.py
tests/downloads/: 7QFT.cif  7UGW.cif
