[build-system]
requires = [
    "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protparser"
version = "0.0.1"
authors = [
  { name="Sophia Vincoff", email="sophia.vincoff@duke.edu" },
]
description = "A package for processing RCSB PDB IDs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython>=1.79",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "requests",
    "beautifulsoup4"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/sophievincoff/protparser"